<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="education.mahmoud.quranyapp.feature.home_Activity.Home">

    <item
        android:id="@+id/actionGoToLastRead"
        android:orderInCategory="100"
        android:title="@string/go_to_latest_read"
        app:showAsAction="never" />

    <item
        android:id="@+id/actionSearch"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never" />


    <item
        android:id="@+id/actionSetting"
        android:title="@string/setting"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/actionDownload"
        android:title="@string/download"
        android:orderInCategory="100"
        app:showAsAction="never"/>



     <item
        android:id="@+id/actionScore"
        android:title="@string/score"
        android:orderInCategory="100"
        app:showAsAction="never"/>

     <item
        android:id="@+id/actionprofile"
        android:title="@string/profile"
        android:orderInCategory="100"
        app:showAsAction="never"/>




</menu>
