<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:textColor="@color/bg_white"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/edResgisterName"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_person"
                android:hint="@string/name"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/edResgisterEmail"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingEnd="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_email"
                android:hint="@string/login_email_hint"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">
            <EditText
                android:id="@+id/edResgisterPassword"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:paddingEnd="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_visibility"
                android:inputType="textPassword"/>
        </android.support.design.widget.TextInputLayout>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spRegister"
            style="@style/SpinKitView.Large.ChasingDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            app:SpinKit_Color="@color/spin_color"
            android:visibility="gone"/>
        <Button
            android:id="@+id/btnResgister"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="Register" />

        <TextView
            android:id="@+id/tvOpenLogin"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/whiteTextColor"
            android:text="@string/signup_login_hint"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

    </LinearLayout>
</android.support.v7.widget.CardView>
