<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">


    <EditText
        android:id="@+id/edSurahNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_edit_search"
        android:hint="@string/enter_surah_num"
        android:inputType="numberDecimal"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_16sdp"
        android:text="OR"
        android:textColor="@color/ayas_color"
        android:textSize="@dimen/_25ssp" />

    <EditText
        android:id="@+id/edSurahName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/back_edit_search"
        android:hint="Enter Surah Name"
        android:inputType="text"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_15ssp" />

    <Button
        android:id="@+id/btnGo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/back_search_res"
        android:text="@string/go"
        android:textColor="@color/ayas_color"
        android:textSize="@dimen/_15ssp" />

    <Button
        android:id="@+id/btnGoToSura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/back_search_res"
        android:text="@string/go"
        android:textColor="@color/ayas_color"
        android:textSize="@dimen/_15ssp"
        android:visibility="gone" />

    <Button
        android:id="@+id/btnGoToSuraByName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_search_res"
        android:text="@string/go_by_name"
        android:textColor="@color/ayas_color"
        android:textSize="@dimen/_15ssp"
        android:visibility="gone" />

</LinearLayout>