<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:padding="@dimen/_16sdp"
    tools:context=".feature.feedback_activity.FeedbackActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_feedback"
            android:text="@string/postives"
            android:padding="@dimen/_6sdp"
            android:background="@drawable/back_search_res"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edPositives"
            android:layout_width="match_parent"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:background="@drawable/back_edit_search"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_55sdp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_feedback"
            android:text="@string/negatives"
            android:padding="@dimen/_6sdp"
            android:background="@drawable/back_search_res"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edNegatives"
            android:layout_width="match_parent"
            android:background="@drawable/back_edit_search"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:minHeight="@dimen/_55sdp"/>
    </LinearLayout>

<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_feedback"
            android:text="@string/suggestions"
            android:padding="@dimen/_6sdp"
            android:background="@drawable/back_search_res"
            android:layout_marginBottom="@dimen/_10sdp"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/edSuggestions"
            android:layout_width="match_parent"
            android:background="@drawable/back_edit_search"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:minHeight="@dimen/_55sdp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnSendFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:background="@drawable/back_search_res"
        android:layout_gravity="center"
        android:textSize="@dimen/_17ssp"
        android:text="@string/send"/>


</LinearLayout>