<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:textColor="@color/whiteTextColor"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/edEmailLogin"
                style="@style/modifiedEditText"
                android:hint="@string/login_email_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingEnd="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/edPassLogin"
                style="@style/modifiedEditText"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_visibility"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:onClick="viewForgotPAssword"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:visibility="gone" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spLogin"
            style="@style/SpinKitView.Large.ChasingDots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_16sdp"
            app:SpinKit_Color="@color/spin_color"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="Login" />

        <TextView
            style="@style/parent"
            android:id="@+id/tvGoToRegister"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:onClick="viewRegisterClicked"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/bg_white"
            android:textStyle="bold"
            />


    </LinearLayout>
</android.support.v7.widget.CardView>
